Data cleaning is ready

--- a/notebooks/clear_data.ipynb
+++ b/notebooks/clear_data.ipynb
@@ -2,14 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "import re\n",
-    "import json\n",
     "\n",
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -24,16 +23,16 @@
     "pd.set_option('display.max_columns', 500)\n",
     "pd.set_option('display.width', 1000)\n",
     "\n",
-    "plt.rcParams['figure.figsize']=(12,6)"
+    "plt.rcParams['figure.figsize'] = (12, 6)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = pd.read_csv('./data/data-example.csv', index_col=0)"
+    "data = pd.read_csv('./data/raw_data/data-example.csv', index_col=0)"
    ]
   },
   {
@@ -466,8 +465,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
-   "metadata": {},
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "geo_points = list(map(lambda point: GeoPoint(point[0], point[1]), data[['latitude', 'longitude']].values))"
@@ -475,11 +476,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "geo_points = data.apply(lambda row: GeoPoint(row['latitude'], row['longitude']), axis=1).values"
+    "data['Микрорайон'] = pd.Series(map(lambda pnt: pnt.get_city_district(), geo_points))"
    ]
   },
   {
@@ -491,11 +492,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data['Станция метро'] = data.apply(lambda row: GeoPoint(row['latitude'], row['longitude']).get_city_sub_region(), axis=1)"
+    "data['Станция метро'] = pd.Series(map(lambda pnt: pnt.get_nearest_station_name_and_distance()[0], geo_points))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Distance to center"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data['До центра'] = pd.Series(map(lambda pnt: pnt.get_distance_to_city_center(), geo_points))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Dump data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data.to_csv('./data/cleared_data/data-example.csv', index=False)"
    ]
   }
  ],
@@ -508,7 +541,7 @@
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2.0
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
